--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,32 @@
 {
-    "name": "frontend",
-    "version": "1.0.0",
-    "description": "ASSO InfoSecCooker Frontend",
-    "author": "Andre & Diogo & Filipe",
-    "license": "ISC",
-    "@std/esm": "cjs",
-    "main": "script.js",
-    "dependencies": {},
-    "devDependencies": {
-        "browserify": "^16.2.2",
-        "npm": "^6.0.1",
-        "opn-cli": "^4.0.0",
-        "ts-node": "^8.0.3",
-        "typescript": "^3.3.3333"
-    },
-    "scripts": {
-        "build": "tsc",
-        "browserify": "browserify build/script.js -o dist/bundle.js",
-        "browser": "npm run build; npm run browserify; opn index.html",
-        "start": "npm run build; node build/main.js"
-    }
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-digraph": "^6.3.0",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
