--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "toposort": "^2.0.2"
   },
   "scripts": {
-    "start": "PORT=8000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
