--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-digraph": "^6.3.0",
     "react-dom": "^16.8.6",
     "react-files": "^2.4.8",
+    "react-loading-screen": "0.0.17",
     "react-scripts": "3.0.1",
     "save-file": "^2.3.1",
     "toposort": "^2.0.2"
