--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,13 +5,17 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-digraph": "^6.3.0",
     "react-dom": "^16.8.6",
     "react-files": "^2.4.8",
     "react-loading-screen": "0.0.17",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.1.1",
     "save-file": "^2.3.1",
     "toposort": "^2.0.2"
   },
